# chat.ellisbs.co.uk

./: .coverage  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  app_unittest.py  chat_history.db  com.user.flaskapp.plist  coverage.xml  package.json  pyproject.toml  requirements.txt  scan_job.sh  sonar-project.properties  start_app.sh  test_job.sh  testscript.sh
__tests__/: script.test.js
k8s/: chat-app-deployment.yaml
src/chat/: app.py
src/chat/templates/: chat_history.html  index.html
static/: script.js  script.test.js
systemd/: chat.service  chat.sh
templates/: chat_history.html  home.html  index.html
tests/: test_app.py
