[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat"
version = "0.1.0"
description = "A project that effectively proxies LLMs (ChatGPT and Claude)"
readme = "README.md"
authors = [
    { name = "Ian Ellis", email = "ellisiana@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["copilot", "llm", "development", "project assistance"]

dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.57.1",
    "anyio==4.9.0",
    "blinker==1.9.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "distro==1.9.0",
    "Flask==3.1.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "jiter==0.11.0",
    "jsonify==0.5",
    "MarkupSafe==3.0.2",
    "openai==1.97.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "requests==2.32.4",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "Werkzeug==3.1.3",
    "wheel==0.45.1"
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "pytest>=6.0.0",
    "pytest-mock>=3.14.1",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "twine>=6.1.0"
]

[project.urls]
Homepage = "https://github.com/magicalbob/chunkwrap/wiki"
Repository = "https://github.com/magicalbob/chunkwrap"

[project.scripts]
chunkwrap = "chunkwrap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
    
[tool.black]
line-length = 88
target-version = ['py38']
    
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
